welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: reassignment to val
    a = b;
      ^max1020:6: error: reassignment to val
    b = temp;
      ^